added header css, change general css and tweek index a little

--- a/styles/general.css
+++ b/styles/general.css
@@ -1,2 +1,10 @@
 body {
+  margin: 0;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #b6d6d2;
 }
