--- a/styles/header.css
+++ b/styles/header.css
@@ -5,7 +5,14 @@
   position: fixed;
   width: 100%;
   height: 50px;
-  background-color: white;
+  background-color: #00000000;
+
+  transition: background-color 0.2s ease-out;
+  z-index: 999;
+}
+
+header.scrolled {
+  background-color: #617d88;
 }
 
 .header-container {
