--- a/styles/general.css
+++ b/styles/general.css
@@ -9,3 +9,19 @@ main {
   align-items: center;
   background-color: #b6d6d2;
 }
+
+a:link,
+a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: black;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
