--- a/styles/header.css
+++ b/styles/header.css
@@ -4,11 +4,12 @@
 
   position: fixed;
   width: 100%;
-  height: 50px;
+  height: 70px;
   background-color: #00000000;
 
   transition: background-color 0.2s ease-out;
   z-index: 999;
+  font-size: 17px;
 }
 
 header.scrolled {
