--- a/styles/r4.css
+++ b/styles/r4.css
@@ -1,13 +1,27 @@
-.r2 {
+.r4 {
+  margin-top: 50px;
   width: 80%;
+  font-size: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
-  margin-bottom: 250px;
 }
 
-.skills-Container {
+.r4-outer-container {
+  width: 80%;
   display: flex;
   justify-content: space-around;
-  font-size: 20px;
+
+  align-items: center;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.r4-outer-container div {
+  margin: 40px;
+  padding: 20px;
 
   box-shadow: -1px -1px 119px 1px rgba(0, 0, 0, 0.61);
   -webkit-box-shadow: -1px -1px 119px 1px rgba(0, 0, 0, 0.61);
@@ -18,8 +32,4 @@
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10.2px);
   -webkit-backdrop-filter: blur(10.2px);
-}
-
-.skills-Container li {
-  text-align: left;
 }
