--- a/styles/r5.css
+++ b/styles/r5.css
@@ -1,13 +1,21 @@
-.r2 {
+.r5 {
+  margin-top: 50px;
   width: 80%;
   text-align: center;
-  margin-bottom: 250px;
+  margin-bottom: 200px;
 }
 
-.skills-Container {
+.r5-outside-container {
   display: flex;
   justify-content: space-around;
-  font-size: 20px;
+}
+
+.r5 h1 {
+  font-size: 40px;
+}
+
+.container {
+  padding: 20px;
 
   box-shadow: -1px -1px 119px 1px rgba(0, 0, 0, 0.61);
   -webkit-box-shadow: -1px -1px 119px 1px rgba(0, 0, 0, 0.61);
@@ -18,8 +26,4 @@
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10.2px);
   -webkit-backdrop-filter: blur(10.2px);
-}
-
-.skills-Container li {
-  text-align: left;
 }
