--- a/styles/general.css
+++ b/styles/general.css
@@ -2,13 +2,9 @@ body {
   margin: 0;
   font-family: "Times New Roman", Times, serif;
   color: black;
-}
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   background-color: #b6d6d2;
+}
+.MainDocuments {
 }
 
 a:link,
@@ -19,12 +15,6 @@ a:visited {
 
 a:hover {
   color: black;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 html {
