--- a/styles/r1.css
+++ b/styles/r1.css
@@ -1,19 +1,16 @@
 .r1 {
-  width: 100%;
   height: 1000px;
   display: flex;
   justify-content: center;
-
-  background-size: cover;
+  align-items: center;
   font-size: 40px;
 }
 
 .r1-container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   width: 80%;
-
   column-gap: 100px;
 }
 
