--- a/styles/r5.css
+++ b/styles/r5.css
@@ -1,12 +1,18 @@
 .r5 {
   margin-top: 50px;
-  width: 80%;
+  width: 100%;
   text-align: center;
   margin-bottom: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .r5-outside-container {
+  width: 80%;
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   justify-content: space-around;
 }
 
@@ -16,6 +22,8 @@
 
 .container {
   padding: 20px;
+
+  font-size: 20px;
 
   box-shadow: -1px -1px 119px 1px rgba(0, 0, 0, 0.61);
   -webkit-box-shadow: -1px -1px 119px 1px rgba(0, 0, 0, 0.61);
