--- a/styles/ResposiveDesign.css
+++ b/styles/ResposiveDesign.css
@@ -10,7 +10,11 @@
     font-size: 15px;
     width: 100%;
     text-align: center;
-    height: 700px;
+    height: 1300px;
+  }
+
+  .r1-1-container {
+    flex-direction: column-reverse;
   }
 
   .r1-container {
@@ -25,26 +29,45 @@
   }
 
   .r2 {
+    display: flex;
+    flex-direction: column;
     width: 100%;
+    height: 900px;
+    align-items: center;
+    margin-bottom: 0px;
   }
 
+  .r2 h1 {
+    font-size: 30px;
+  }
   .skills-Container {
+    width: 80%;
     display: flex;
     flex-wrap: wrap;
-    font-size: 20px;
-    text-align: center;
+    font-size: 15px;
+  }
+
+  .skills-Container h3 {
+    font-size: 25px;
   }
 
   .r3 {
     width: 100%;
-    height: 700px;
+    height: 900px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 250px;
   }
   .r3 h1 {
     font-size: 30px;
   }
 
   .r3-container {
-    margin-top: 200px;
+    margin-top: 150px;
+
+    width: 90%;
   }
 
   .inside-container-01,
@@ -69,13 +92,33 @@
     font-size: 20px;
   }
 
+  .r4-outer-container {
+    width: 90%;
+  }
+
   .r5 {
     width: 100%;
+    height: 1100px;
+    margin-bottom: 1px;
+  }
+  .r5 h1 {
+    font-size: 30px;
+  }
+  .r5-outside-container {
+    margin-top: 1px;
+  }
+  .container {
+    font-size: 18px;
+  }
+
+  .r5-outside-container {
+    display: flex;
+    height: 100%;
   }
 
   footer {
     padding: 0px;
-    font-size: 10px;
+    font-size: 7px;
     padding-top: 5px;
     padding-bottom: 5px;
   }
