--- a/styles/r1.css
+++ b/styles/r1.css
@@ -1,25 +1,34 @@
 .r1 {
-  height: 1000px;
+  height: 1800px;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   font-size: 40px;
 }
 
-.r1-container {
+.r1-container,
+.r1-1-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
+
   width: 80%;
   column-gap: 100px;
 }
 
-.r1-content {
+.r1-1-container {
+  flex-direction: row-reverse;
+  text-align: justify;
+}
+
+.r1-content,
+.r1-1-content {
   flex-direction: column;
   z-index: 20;
 }
 
 .r1 img {
-  height: 600px;
+  height: 700px;
   border-radius: 200px;
 }
