--- a/styles/r3.css
+++ b/styles/r3.css
@@ -1,7 +1,7 @@
 .r3 {
   width: 100%;
-  height: 1000px;
-  margin-bottom: 700px;
+  height: 1400px;
+  margin-bottom: 850px;
 }
 
 .r3 h1 {
@@ -9,7 +9,7 @@
   font-size: 50px;
 }
 .r3-container {
-  margin-top: 300px;
+  margin-top: 400px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -21,14 +21,11 @@
   background-position: center;
   background-size: cover;
   position: absolute;
+  border-radius: 40px;
 
   width: 1523px;
-  height: 495px;
+  height: 650px;
   z-index: 1;
-
-  box-shadow: -1px -1px 41px 6px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: -1px -1px 41px 6px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: -1px -1px 41px 6px rgba(0, 0, 0, 0.75);
 }
 
 .content {
@@ -44,7 +41,7 @@
   background: rgba(255, 255, 255, 0.03);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(10.2px);
+  backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(10.2px);
 }
 
@@ -54,5 +51,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 35px;
+  font-size: 40px;
 }
