--- a/styles/r5.css
+++ b/styles/r5.css
@@ -9,6 +9,7 @@
 }
 
 .r5-outside-container {
+  margin-top: 40px;
   width: 80%;
   display: flex;
   flex-wrap: wrap;
@@ -17,20 +18,20 @@
 }
 
 .r5 h1 {
-  font-size: 40px;
+  font-size: 50px;
 }
 
 .container {
   padding: 20px;
 
-  font-size: 20px;
+  font-size: 25px;
+
+  border-radius: 60px;
 
   box-shadow: -1px -1px 119px 1px rgba(0, 0, 0, 0.61);
   -webkit-box-shadow: -1px -1px 119px 1px rgba(0, 0, 0, 0.61);
   -moz-box-shadow: -1px -1px 119px 1px rgba(0, 0, 0, 0.61);
-
   background: rgba(255, 255, 255, 0.16);
-  border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10.2px);
   -webkit-backdrop-filter: blur(10.2px);
