--- a/styles/blog/general.css
+++ b/styles/blog/general.css
@@ -1,13 +1,10 @@
 body {
-  margin: 0;
-  font-family: "Times New Roman", Times, serif;
-  color: black;
-  background-color: #b6d6d2;
+  margin: 0px;
+  font-family: "Playfair Display", serif;
+  font-style: normal;
+  background-color: #f8f6f0;
 }
 
-main {
-  margin-top: 100px;
-}
 a:link,
 a:visited {
   text-decoration: none;
