--- a/styles/Game portfolio/header.css
+++ b/styles/Game portfolio/header.css
@@ -1,53 +1,47 @@
 .header,
 .h1-left-side,
-.h1-right-side{
+.h1-right-side {
   display: flex;
   justify-content: space-evenly;
-
 }
 
-.header{
+.header {
   background-color: #33998a00;
   position: fixed;
   width: 100%;
- top: -1px;
+  top: -1px;
   gap: 500px;
 
-  transition: background-color .2s ease-out;
+  transition: background-color 0.2s ease-out;
   z-index: 999;
 }
 
-header.scrolled{
+header.scrolled {
   background-color: #33998a;
-
 }
 
-
-
-.h1-left-side img{
+.h1-left-side img {
   height: 90px;
   display: flex;
 
   align-items: center;
   filter: invert(1);
-  transition: invert .3s ease-out;
+  transition: invert 0.3s ease-out;
 }
 
-.h1-left-side p{
+.h1-left-side p {
   width: 100px;
   padding-left: 5px;
-
 }
 
-.h1-right-side{
+.h1-right-side {
   width: 500px;
   justify-content: space-evenly;
   align-items: center;
-
+  color: whitesmoke;
 }
 
-.header-container{
- 
+.header-container {
   width: 76%;
   display: flex;
   justify-content: space-between;
