fix gameportfoliop g0 and s1 image directory

--- a/styles/Game portfolio/s1.css
+++ b/styles/Game portfolio/s1.css
@@ -1,5 +1,5 @@
 .s1 {
-  background-image: url("/image/bfg/GridArt_20241023_171547121.jpg");
+  background-image: url("../../image/bfg/GridArt_20241023_171547121.jpg");
   background-size: cover;
   background-position: center;
   height: 800px;
