--- a/styles/blog/main.css
+++ b/styles/blog/main.css
@@ -1,6 +1,7 @@
 .b1 {
+  padding-top: 50px;
   width: 100%;
-  height: 1000px;
+  height: 100%;
   z-index: 1;
   display: flex;
   align-items: center;
@@ -8,14 +9,15 @@
 }
 
 .b1-outside-container {
-  height: 900px;
+  height: 40%;
   position: relative;
   width: 80%;
 }
 
 .b1-inside-container {
   width: 100%;
-  height: 100px;
+  height: 80%;
+  background-color: green;
 }
 
 .b1-content {
