--- a/styles/Game portfolio/s2.css
+++ b/styles/Game portfolio/s2.css
@@ -3,7 +3,7 @@
   border-radius: 30px;
   border: 3px #7de2d180;
 
-  border-style:solid;
+  border-style: solid;
 
   width: 74%;
   display: flex;
@@ -12,10 +12,9 @@
   justify-content: center;
   flex-wrap: wrap;
   padding-bottom: 20px;
-
 }
 
-.s2 h2{
+.s2 h2 {
   margin-top: 50px;
   border-color: #7de2d1a2;
   border-style: solid;
@@ -23,22 +22,17 @@
   border-radius: 20px;
 }
 
-
-.s2-outer-container, 
+.s2-outer-container,
 .s2-outer-container-2 {
   display: flex;
   width: 100%;
   justify-content: space-evenly;
 
   margin-top: 80px;
-  
 }
 
-
 .main-container {
-
   background-color: #15504793;
-
 
   display: flex;
   flex-direction: column;
@@ -51,10 +45,9 @@
   height: 300px;
 
   position: relative;
-  box-shadow: 0px -1px 31px 12px rgba(0,0,0,0.49);
-  -webkit-box-shadow: 0px -1px 31px 12px rgba(0,0,0,0.49);
-  -moz-box-shadow: 0px -1px 31px 12px rgba(0,0,0,0.49);
-
+  box-shadow: 0px -1px 31px 12px rgba(0, 0, 0, 0.49);
+  -webkit-box-shadow: 0px -1px 31px 12px rgba(0, 0, 0, 0.49);
+  -moz-box-shadow: 0px -1px 31px 12px rgba(0, 0, 0, 0.49);
 }
 
 .main-container div {
@@ -62,9 +55,7 @@
 }
 
 .main-container img {
-
   width: 100px;
-
   border-radius: 100px;
   padding: 15px;
 
@@ -72,10 +63,6 @@
   top: -60px;
 }
 
-
-
-
-.main-container p{
+.main-container p {
   padding: 5px;
 }
-
