-fix background color footer,headear and general resume
-change "Landing page " to "System portfolio"

--- a/styles/resume/general.css
+++ b/styles/resume/general.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   font-family: "Times New Roman", Times, serif;
   color: black;
-  background-color: #b6d6d2;
+  background-color: #f8f6f0;
 }
 
 main {
