--- a/styles/shared-css/footer.css
+++ b/styles/shared-css/footer.css
@@ -2,7 +2,7 @@ footer {
   margin-top: 50px;
   display: flex;
   justify-content: center;
-  background-color: #243c54;
+  background-color: #686868;
   padding: 20px;
   font-size: 20px;
 }
